Fix patchSection z-index

--- a/app/Home/Home.css
+++ b/app/Home/Home.css
@@ -113,6 +113,7 @@
     width: 100%;
     position: absolute;
     bottom: 0;
+    z-index: -1;
     background: rgb(230,230,230);
     border-top: 1px solid rgb(220,220,220);
 }
